<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pequeno grande medo</string>
    <string name="redes_sociais">Redes Sociais</string>
    <string name="textSaia">Fundamos a Sirius Entertainment no ano de 2023, parte do fechamento do nosso curso,e nós, 6 grandes amigos, decidimos que seriamos o melhor time para entregar o melhor jogo.
    A empresa é formada por: Danilo Garcia, líder, CEO, organizando toda a questão de documentação e mantendo o grupo pra frente. Felipe Maciel, Vice-Líder e principal artista, desenhando todos os personagens e dando vida ao jogo. Isabele Timotio, segunda artista, fazendo os backgrounds, cenários, e criando o worldbuilding. Lucas Wey, programador principal, fazendo todo o front-end e criando realmente o jogo. Guilherme Roizentul, assistindo ambos o time de programação e design, e, por fim, mas não menos importante, Víctor Tupinambá, diretor de áudio.</string>
    <string name="textEnredo" tools:ignore="TypographyEllipsis">Acordando em uma realidade completamente diferente da sua, Stella, brasileira, guerreira por natureza, deve lutar para descobrir como parar o caos que é jogado para cima dela... Monstros, Almas Corrompidas e seus próprios demônios serão desafios que só os mais dignos poderiam pensar em enfrentá-los e sair vitorioso.  /n    O lugar onde ela está, Reino das Almas Perdidas, é o lugar para onde as almas que não foram aceitas nem pelo céu nem pelo inferno acabam parando depois do inevitável destino da morte... as almas que aceitam seu destino, vivem pacificamente no Éden, cidade principal que os abriga desde a sua fundação. No entanto, aqueles que recusam aceitar seu caminho, e saem da cidade em busca de vingança, respostas, ou simplesmente uma saída, acabam se corrompendo com os espíritos que vivem no Tártaro. Essas almas são conhecidas como Almas Corrompidas, antigas almas boas que agoram só conhecem violência e caos... Essas almas são lideradas por Karoj, que é o responsável pela queda de Stella neste reino, e será seu desafio final.</string>
    <string name="textPersonagem">História: A Caroline vive no bairro onde fica a casa abandonada e frequenta a mesma escola que seus dois amigos o Steve e Henri. Gosta bastante de se aventurar e tem uma personalidade forte.</string>
    <string name="textView4">" História: esta velhinha chamada Filomena era dona da casa abandonada e em vida fazia bastante festas, mas ela não conseguia ir para seu sótão por conta de uma barata grande que estava lá e quando morreu, não conseguiu descansar por completo por nunca poder ir ao seu sótão e acabou aprisionada na casa. Ela só conseguirá descansar em paz quando a barata morrer."</string>
    <string name="textTexto">Nós planejamos está playlist para você, caro jogador ou jogadora ter uma imersão maior dentro do jogo e que se sinta parte dele! Esperamos que goste.</string>
    <string name="textPlaylist">Playlist</string>
    <string name="textTitulo">Lucinius (773 a.C. - 730 a.C.), é um dos guias do Reino das Almas Perdidas, ele nasceu em uma das tribos que seriam as fundadoras de roma, conhecendo pessoalmente os lendários Rômulo e Remo, e os ajudou nas primeiras campanhas que fundariam o Reino de Roma. No entanto, pouco antes da fundação da cidade de Roma, ele ficou sabendo do plano de Rômulo de matar o irmão e fundar a cidade sobre seu sangue, mas por ser uma pessoa muito medrosa, Lucinius não fez nada, Remo foi assassinado e Roma foi fundada.Lucinius passaria os próximos anos com culpa, mas tentando seguir em frente, o que ficaria mais difícil conforme o tempo foi passando, pois Rômulo era um rei violento e ordenava massacres e sequestros nas cidades vizinhas. Passando-se 20 anos convivendo com a culpa de ver tanto sangue derramado, ele decide armar um assassinato para o rei de Roma, mas ele foi descoberto e condenado á pena capital por traição, conhecendo o seu fim no ano de 730 a.C
Ele se torna uma das primeiras almas perdidas a povoar o Reino, e ele se torna uma alma cada vez mais amargurada com o passar dos anos, pois ele é um dos poucos que têm a habilidade de ver os eventos acontecendo no mundo real, e devido ao tamanho do impacto que o Império Romano teve nos eventos da história, ele se sente culpado por quase todas as guerras, massacres e tragédias que existiram, por sentir que poderia ter evitado tudo isso, se não sentisse tanto medo.
   </string>
    <string name="textTituloEnredo">N’Zula (c. 1825 - 1879) é uma personagem secundária que ajuda Stella no decorrer do jogo, sendo uma vendedora de armas e outros itens. Esse também era o emprego dela no mundo real, ela nasceu em Angola, em algum ano no começo do século XIX,  passou a maior parte da vida seguindo sua vocação, vendendo armas para os oprimidos e desolados. Ela conseguiu viver mais de meio século armando os movimentos contra a colonização europeia, em especial a Portuguesa, por todos os crimes que cometeram contra seu povo. Ela foi finalmente caçada e ferida em um assalto à sua casa, em 1879.
</string>
   <string name="textEasterEgg">Karoj é o principal antagonista, responsável por trazer Stella para este mundo e espalhar o caos no Reino. Ele é o principal líder das almas corrompidas, que buscam destruir o Éden. Muito pouco se sabe sobre sua vida no mundo real, mas sabem que ele viveu em algum lugar na Europa Oriental na Idade Média.
Alguns teorizam que ele era um soldado ou um general, pela sua experiência em batalha e sua liderança perante as outras almas. Ele passa a maior parte do jogo como anônimo, no entanto, ele é diretamente responsável pelos eventos do jogo. Como Lucinius, ele também tem a habilidade de ver o mundo real, e após analisar diversas almas, ele decidiu que Stella seria perfeita para seu plano: trazer uma pessoa com emoções tão fortes que causaram caos nas criaturas ali presentes. Seu plano funciona, e perto do fim do jogo Stella o confronta, ele explica o que houve e que ela já não é mais importante, e se recusa a lutar, mas Stella passa por uma crise de raiva e o destrói ali mesmo.</string>
    <string name="textBoss">
        Stella, nascida em Brasilândia, 2000, estudante da UFB, Brasil, é a protagonista. Sua maior caraterística são suas fortes emoções, e sua falta de controle sobre elas. Essa característica foi justamente o que fez as forças ocultas de Karoj à transportarem-na ao Reino, ela passa por uma jornada de aceitação em que finalmente aprende a viver com as próprias emoções, tendo que lutar contra a própria raiva, literalmente, para entender o porquê dela ser assim. \n finalmente, com ajuda de Lucinius e N\'Zula ela lutou bravamente contra os monstros e as almas corrompidas para achar paz à esse mundo, e principalmente, à si mesma. Sua contraparte maligna é basicamente um reflexo de suas crises emocionais, nada mais que uma personificação de suas emoções profundas.
    </string>
    <string name="textBarata">História: a barata nasceu naquele sótão e passou a gostar de lá, tanto que nunca saiu de seu local de nascimento. Ninguém conseguiu encontrar ela e quando encontrava saia correndo no mesmo momento, mas mau sabe ela que um dia encontraria uma garotinha corajosa.</string>
    <string name="btnInstagram">Instagram</string>
    <string name="btnRedesSociais">Redes Sociais</string>
    <string name="btnHistoria">História</string>
    <string name="btnPersonagens">Personagens</string>
    <string name="btnBoss">Boos</string>
    <string name="btnPlaylist">Voltar ao menu</string>
    <string name="btnEasterEgg">A Empresa</string>
    <string name="btnThreads">Linkedin</string>
    <string name="btnimg">teste</string>
    <string name="bot_o_que_abre_a_activity_personagens">Botão que abre a activity personagens</string>
    <string name="bot_o_que_abre_a_activity_redes_sociais">Botão que abre a activity redes sociais</string>
    <string name="bot_o_que_abre_a_activity_sobre_a_empresa">Botão que abre a activity sobre a empresa</string>
</resources>