<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_tela4"
    tools:context=".redessocias">

    <ImageButton
        android:id="@+id/btnInstagram"
        android:layout_width="253dp"
        android:layout_height="135dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="@color/invisivel"
        android:contentDescription="Botão que abre o instagram"
        android:src="@drawable/insta_removebg_preview"
        android:text="@string/btnInstagram"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnThreads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnThreads"
        android:layout_width="253dp"
        android:layout_height="135dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/invisivel"
        android:contentDescription="Botão que abre o linkedin"
        android:src="@drawable/_2_removebg_preview"
        android:text="@string/btnThreads"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInstagram" />

    <ImageButton
        android:id="@+id/buttonaaa"
        android:layout_width="253dp"
        android:layout_height="135dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="143dp"
        android:backgroundTint="@color/invisivel"
        android:contentDescription="Botao que volta para a activity main"
        android:src="@drawable/_14_removebg_preview"
        android:text="@string/btnPlaylist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThreads"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>