<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sirius_entertainemen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnhist"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnHistoria"
        android:textColor="#FFF7F7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btnperso"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnPersonagens"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/btnRedesSociais"
        android:layout_width="134dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnRedesSociais"
        app:layout_constraintTop_toBottomOf="@+id/btnEasteregg"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="138dp" />

    <Button
        android:id="@+id/btnEasteregg"
        android:layout_width="138dp"
        android:layout_height="63dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnEasterEgg"
        app:layout_constraintBottom_toTopOf="@+id/btnRedesSociais"
        app:layout_constraintEnd_toStartOf="@+id/btnRedesSociais"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnperso"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imagebtnVoltar"
        android:layout_width="102dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="MAinActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,UseAppTint,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="98dp"
        android:layout_height="56dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="#00FFFFFF"
        android:importantForAccessibility="no"
        android:tint="@color/invisivel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagebtnVoltar"
        app:srcCompat="@android:drawable/divider_horizontal_bright"
        tools:ignore="ImageContrastCheck,MissingConstraints,UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>